--- a/subscriber/Cargo.toml
+++ b/subscriber/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
 [dependencies]
 common = { path = "../common" }
 serde_json = "1.0.114"
+serde = "1.0.197"
+prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
+prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
