--- a/subscriber/Cargo.toml
+++ b/subscriber/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
 
 [dependencies]
+
 common = { path = "../common" }
 serde_json = "1.0.114"
 serde = "1.0.197"
 prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
 prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
+tokio = "1.36.0"
